--- a/popup.css
+++ b/popup.css
@@ -22,17 +22,17 @@
   overflow-x: hidden;
 }
 
-ul {
-  border: 1px solid;
-  list-style-type: none;
-  list-style:none;
-  padding-left:0;
+.content-div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  margin-bottom: 15px;
 }
 
-li{
-  border: 1px solid;
-  min-height: 50px;
-  height: auto;
-  word-wrap: break-word;
-  line-height: 23px
+.image {
+  width: 284px;
+  height: 174px;
+  margin-bottom: 36px;
 }
+
