--- a/popup.css
+++ b/popup.css
@@ -1,7 +1,6 @@
 .body {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
   width: 100%;
   height: auto;
@@ -12,27 +11,33 @@
   flex-direction: column;
   justify-content: center;
   align-items: stretch;
-  width: 300px;
+  width: 500px;
   height: auto;
 }
 
 .root {
-  max-height: 413px;
-  overflow: scroll;
-  overflow-x: hidden;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .content-div {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100%;
+  width: 48%;
   margin-bottom: 15px;
+  flex: 1 1;
 }
 
 .image {
-  width: 284px;
-  height: 174px;
-  margin-bottom: 36px;
+  width: 241px;
+  height: 182px;
+  margin-bottom: 12px
 }
 
+button{
+  width: 100%;
+}
