--- a/popup.css
+++ b/popup.css
@@ -35,7 +35,8 @@
 .image {
   width: 241px;
   height: 182px;
-  margin-bottom: 12px
+  margin-bottom: 12px;
+  background-color: #7E8F7C;
 }
 
 button{
