lazy loading and improvement in page loading reduce srcset images quantity

--- a/popup.css
+++ b/popup.css
@@ -36,7 +36,7 @@
   width: 241px;
   height: 182px;
   margin-bottom: 12px;
-  background-color: #7E8F7C;
+  /* background-color: #7E8F7C; */
 }
 
 button{
